FAB Button only appears on projects list page

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -5,7 +5,7 @@
 				<md-icon md-svg-src="modules/core/img/icons/menu.svg" class="darkIcon" aria-label="Cake"></md-icon>
 			</md-button>
 			<span flex></span>
-			<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')">
+			<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')" ng-show = "onProjects()">
 				<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
 			</md-button>
 		</div>
