--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -39,8 +39,8 @@
 			<md-card flex class = "cardHeight">
 				<md-toolbar layout="row" class="cardHeader">
 					<div id="marquee" style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
-						<h3 ng-hide="isOverflow()">{{project.name}}</h3>
-						<marquee width="100%"><h3 ng-hide="isNotOverflow()">{{project.name}}</h3></marquee>
+						
+						<marquee width="100%"><h3 ng-hide="isOverflow()">{{project.name}}</h3></marquee>
 					</div>
 					<md-button aria-label="photo" class="md-icon-button">
 						<md-icon md-svg-src="modules/projects/img/icons/home.svg"></md-icon>
