--- a/app/views/templates/invite-email.server.view.html
+++ b/app/views/templates/invite-email.server.view.html
@@ -6,10 +6,10 @@
 		<p>Dear {{name}},</p>
 		<br>
 		<p>
-			You have been invited to estimate on {{projectName}}
+			You have been invited to estimate on <b>{{projectName}}</b>
 		</p>
 		<p>Please visit this url to estimate:</p>
-		<p>{{url}}</p>
+		<p><a href={{url}}>{{url}}</a></p>
 		<br>
 		<br>
 		<p>The {{appName}} Team</p>
