Can send multiple emails without crashing

--- a/app/views/templates/invite-email.server.view.html
+++ b/app/views/templates/invite-email.server.view.html
@@ -9,7 +9,8 @@
 			You have been invited to estimate on <b>{{projectName}}</b>
 		</p>
 		<p>Please visit this url to estimate:</p>
-		<p><a href={{url}}>{{url}}</a></p>
+		<!-- <p><a href={{url}}>{{url}}</a></p> -->
+		<p>{{url}}</p>
 		<br>
 		<br>
 		<p>The {{appName}} Team</p>
