--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -18,5 +18,5 @@
 			<span data-ng-bind="report.user.displayName"></span>
 		</em>
 	</small>
-	<div d3-bars bar-height='20' bar-padding='5'></div>
+	<div d3-bars bar-height='20' bar-padding='5' id='barchart'></div>
 </section>
