--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,4 +1,4 @@
-<div class="container" data-ng-controller="HeaderController">
+<div class="container header_content" data-ng-controller="HeaderController">
 	<md-toolbar class="md-whiteframe-z2">
 		<div class="md-toolbar-tools mainToolbar" >
 			<md-button class="md-icon-button headerButton" aria-label="Settings" ng-click="toggleLeft()" hide-gt-md>
