--- a/public/modules/sidenav/views/sidenav.client.view.html
+++ b/public/modules/sidenav/views/sidenav.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="SidenavController" class = "sidenav">
+<section data-ng-controller="SidenavController" class = "sidenav" id = "sidenav" >
 	<md-sidenav class="md-sidenav-left md-whiteframe-z2 sidenav coloredBackground" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 		<!-- <md-list ng-controller="LeftCtrl">
 			<md-list-item ng-click="go('/')">
