--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -45,13 +45,18 @@
 
 <body class="ng-cloak">
 	<div layout = "row" class="fullFlex">
-		<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class = "sidenav"></section>
-		<div layout = "column" flex>
-			<div data-ng-include="'/modules/core/views/header.client.view.html'"></div>
-			<section class="container" flex>
-				{% block content %}{% endblock %}
-			</section>
+		<div>
 		</div>
+		<div layout = "column" class ="sidenavContainer">
+			<div class = "header_cotainer">
+			<div data-ng-include="'/modules/core/views/header.client.view.html'">
+			</div>
+			</div>
+			<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class = "sidenav"></section>
+		</div>
+		<section class="container" flex>
+			{% block content %}{% endblock %}
+		</section>
 	</div>
 
 	<!--Embedding The User Object-->
