--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -43,19 +43,29 @@
 	<![endif]-->
 </head>
 
-<body class="ng-cloak">
-	<div layout = "row" class="fullFlex">
-		<div>
-		</div>
-		<div layout = "column" class ="sidenavContainer">
+<body layout="row">
+
+		<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class ="sidenav" tabindex="-1">
+		</section>
+		<md-content layout ="column" tabindex="-1" role ="main" flex>	
 			<div data-ng-include="'/modules/core/views/header.client.view.html'">
 			</div>
-			<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class = "sidenav"></section>
+			<md-content>
+				<section class="container" flex>
+					{% block content %}{% endblock %}
+				</section>
+			</md-content>
+		</md-content>
+
+		<!--
+
+		<div class="sidenav">
+		
 		</div>
-		<section class="container" flex>
-			{% block content %}{% endblock %}
-		</section>
-	</div>
+		<div layout = "column" class ="sidenavContainer">
+		</div>
+	
+		-->
 
 	<!--Embedding The User Object-->
 	<script type="text/javascript">
