--- a/public/modules/users/views/password/reset-password-success.client.view.html
+++ b/public/modules/users/views/password/reset-password-success.client.view.html
@@ -1,4 +1,6 @@
 <section class="row text-center">
+	<div style="height:64px;">
+	</div>
 	<h3 class="col-md-12">Password successfully reset</h3>
 	<a href="/#!/" class="col-md-12">Continue to home page</a>
 </section>
