--- a/public/modules/users/views/password/reset-password.client.view.html
+++ b/public/modules/users/views/password/reset-password.client.view.html
@@ -1,4 +1,6 @@
 <section class="row" data-ng-controller="PasswordController">
+	<div style="height:64px;">
+	</div>
 	<h3 class="col-md-12 text-center">Reset your password</h3>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
 		<form data-ng-submit="resetUserPassword()" class="signin form-horizontal" autocomplete="off">
