--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -44,29 +44,18 @@
 </head>
 
 <body layout="row">
-
-		<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" class ="sidenav" tabindex="-1">
-		</section>
-		<md-content layout ="column" tabindex="-1" role ="main" flex>	
-			<div data-ng-include="'/modules/core/views/header.client.view.html'">
-			</div>
-			<md-content>
-				<section class="container" flex>
-					{% block content %}{% endblock %}
-				</section>
-			</md-content>
+	<section data-ng-include="'/modules/sidenav/views/sidenav.client.view.html'" 
+	class ="sidenav" tabindex="-1">
+	</section>
+	<md-content layout ="column" tabindex="-1" role ="main" flex>	
+		<div data-ng-include="'/modules/core/views/header.client.view.html'">
+		</div>
+		<md-content>
+			<section class="container" flex>
+				{% block content %}{% endblock %}
+			</section>
 		</md-content>
-
-		<!--
-
-		<div class="sidenav">
-		
-		</div>
-		<div layout = "column" class ="sidenavContainer">
-		</div>
-	
-		-->
-
+	</md-content>
 	<!--Embedding The User Object-->
 	<script type="text/javascript">
 		var user = {{ user | json | safe }};
