Starting to make the reports visiable

--- a/public/modules/sidenav/views/sidenav.client.view.html
+++ b/public/modules/sidenav/views/sidenav.client.view.html
@@ -29,6 +29,10 @@
 				<md-button class="sideNavItem" ng-click="go('/projects');toggleLeft()"><span>Projects</span></md-button>
 				<md-divider></md-divider>
 
+				<md-button class="sideNavItem" ng-click="go('/reports');toggleLeft()"><span>Reports
+				</span></md-button>
+				<md-divider></md-divider>
+
 				<md-button class="sideNavItem" ng-click="signOut();toggleLeft()"><span>Sign Out</span></md-button>
 			</div>
 		</md-content>
