Correctly selects which new estimators to add

--- a/public/modules/projects/views/add-estimator.client.view.html
+++ b/public/modules/projects/views/add-estimator.client.view.html
@@ -15,6 +15,6 @@
 			</p>
 			<md-checkbox class="md-secondary" ng-model="person.isEstimator"></md-checkbox> 
 		</md-list-item>
-		<md-button class="md-primary md-raised" ng-click="saveProject();cancel()"> Save </md-button>
+		<md-button class="md-primary md-raised" ng-click="updateEstimators();cancel()"> Save </md-button>
 	</md-content>
 </md-dialog>
