--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -23,7 +23,7 @@
                 <md-icon md-svg-icon="modules/projects/img/icons/right_arrow.svg"></md-icon>
             </md-button>
             <h3>Project Members</h3>
-            <md-button class="md-icon-button" aria-label="More" ng-click = "addEstimator($event)">
+            <md-button class="md-icon-button" aria-label="More" ng-click = "showAddEstimatorDialogBox($event)">
                 <md-tooltip>
                   Add Member
                 </md-tooltip>
