Updated estimators icon and tooltip to make more sense

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -25,9 +25,9 @@
             <h3>Project Members</h3>
             <md-button class="md-icon-button" aria-label="More" ng-click = "showAddEstimatorDialogBox($event)">
                 <md-tooltip>
-                  Add Member
+                  Edit Estimators
                 </md-tooltip>
-                <md-icon md-svg-icon="modules/projects/img/icons/add.svg"></md-icon>
+                <md-icon md-svg-icon="modules/projects/img/icons/edit.svg"></md-icon>
             </md-button>
         </md-content>
         <md-list ng-hide="members">
