Added a simplt starting box plot

--- a/public/modules/reports/views/list-reports.client.view.html
+++ b/public/modules/reports/views/list-reports.client.view.html
@@ -50,8 +50,7 @@
                 </md-toolbar>
                 <br/>
                 <md-card-content class="md-padding" class="cardHeight" style="overflow:auto;"> 
-                    <p>{{project.description}}</p>
-                    <md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/reports/{{project._id}}')">
+                    <md-button aria-label="View/Edit" class="md-button" ng-click="goTo('/reports/{{project._id}}')" flex>
                     View Report
                     </md-button>
                 </md-card-content>
