--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -16,6 +16,9 @@
 				<i class="glyphicon glyphicon-trash"></i>
 			</a>
 		</div>
-		<div d3-bars bar-height='20' bar-padding='5' id='barchart'></div>
+		<div flex id="chart">
+		<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
+		<div box-plot id='boxPlot'></div>
+		</div>
 	</md-card>
 </section>
