--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -7,8 +7,8 @@
            	<p>{{currentNode.title}}</p>
         	</div>
         </md-toolbar>
-        <br/>
-		<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == report.user._id))">
+        <md-card-content>
+        <div class="imageMain" data-ng-show="((authentication.user) && (authentication.user._id == report.user._id))">
 			<a class="btn btn-primary" href="/#!/reports/{{report._id}}/edit">
 				<i class="glyphicon glyphicon-edit"></i>
 			</a>
@@ -17,5 +17,14 @@
 			</a>
 		</div>
 		<div d3-bars bar-height='20' bar-padding='5' id='barchart'></div>
+		
+		<div class="" ng-repeat="r in report.project.children" >
+		<h3>Stats 'n shit</h3>
+			{{r.title}}: <br /> <span style="padding-left: 5em">Standard deviation: {{r.stdDeviation}} </span> <span style="padding-left: 5em">Mean: {{r.mean}}</span><br /><br />
+			<div ng-repeat="n in r.nodes">
+				{{n.title}}: <br /> <span style="padding-left: 5em">Standard deviation: {{n.stdDeviation}} </span> <span style="padding-left: 5em">Mean: {{n.mean}}</span><br /><br />
+			</div>
+		</div>
+		</md-card-content>
 	</md-card>
 </section>
