Update to the design of the create project page

--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -17,10 +17,10 @@
 				
 				<md-list>
 					<md-subheader class="md-no-sticky">Estimators</md-subheader>
-					<md-list-item ng-repeat="person in people" layout="row">
+					<md-list-tem ng-repeat="person in people" layout="row">
 						<p> {{person.name}} </p>
 						<md-checkbox class="md-primary" ng-model="person.selected" aria-label="selected"></md-checkbox>
-					</md-list-item>
+					</md-list-tem>
 				</md-list>
 
 				<!-- <div flex="50" flex-md="100" layout="column">
