--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -17,6 +17,7 @@
 
 			<md-divider></md-divider>
 
+			<!-- Script for tree creation -->
 			<div ui-tree>
 			<script type="text/ng-template" id="nodes_renderer.html">
 				<div ui-tree-handle class="tree-node tree-node-content" layout = "row">
