Small change to add separator again

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -28,6 +28,8 @@
 				</md-list-item>
 			</md-list>
 
+			<md-divider></md-divider>
+
 			<div ui-tree>
 			<!-- Nested node template -->
 			<script type="text/ng-template" id="nodes_renderer.html">
