Fix for weird textarea size
bower install required to update angular material dep

--- a/public/modules/projects/views/create-project.client.view.html
+++ b/public/modules/projects/views/create-project.client.view.html
@@ -12,7 +12,7 @@
 					<!-- Use floating label instead of placeholder -->
 					<label>Project description</label>
 					<!-- Use text area instead of input for better visability of the description -->
-					<textarea ng-model="description" md-no-autogrow required></textarea>
+					<textarea ng-model="description" required></textarea>
 				</md-input-container>
 				
 				<md-list>
