Working box plot

--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -18,7 +18,10 @@
 		</div>
 		<div flex id="chart">
 		<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
-		<div box-plot id='boxPlot'></div>
+		</div>
+		<div box-plot id="boxPlot">
+			<div></div>
+			<p></p>
 		</div>
 	</md-card>
 </section>
