--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -3,7 +3,7 @@
 		<md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" hide-gt-md>
 			<md-icon md-svg-src="modules/core/img/icons/menu.svg" class="darkIcon" aria-label="Cake"></md-icon>
 		</md-button>
-		<span flex></span>
+		<span flex>{{getHeaderPath()}}</span>
 		<md-button class="md-fab" style="positon: absolute; left: -25pt; top: 23pt; z-index: 200 !important;" aria-label="Go to project page" ng-click="goTo('projects/create')" ng-show = "onProjects()">
 			<md-icon md-svg-src="modules/core/img/icons/add.svg"></md-icon>
 		</md-button>
