--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -8,17 +8,30 @@
         	</div>
         </md-toolbar>
         <br/>
-		<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == report.user._id))">
-			<a class="btn btn-primary" href="/#!/reports/{{report._id}}/edit">
-				<i class="glyphicon glyphicon-edit"></i>
-			</a>
-			<a class="btn btn-primary" data-ng-click="remove();">
-				<i class="glyphicon glyphicon-trash"></i>
-			</a>
-		</div>
-		<div flex id="chart">
-		<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
-		<div box-plot id='boxPlot'></div>
-		</div>
+        <md-tabs md-dynamic-height md-border-bottom>
+      		<md-tab label="Bar Graph">
+				<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == report.user._id))">
+					<a class="btn btn-primary" href="/#!/reports/{{report._id}}/edit">
+						<i class="glyphicon glyphicon-edit"></i>
+					</a>
+					<a class="btn btn-primary" data-ng-click="remove();">
+						<i class="glyphicon glyphicon-trash"></i>
+					</a>
+				</div>
+				<div flex id="chart">
+				<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
+				<div box-plot id='boxPlot'></div>
+				</div>
+			</md-tab>
+			<md-tab label="Graph option two">
+				<p>Pie</p>
+			</md-tab>
+			<md-tab label="Graph option three">
+				<p>Histo</p>
+			</md-tab>
+			<md-tab label="You get the idea">
+				<p>yea</p>
+			</md-tab>
+		</md-tabs>
 	</md-card>
 </section>
