Placed the boc plot into the correct tab

--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -20,11 +20,14 @@
 				</div>
 				<div flex id="chart">
 				<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
-				<div box-plot id='boxPlot'></div>
 				</div>
 			</md-tab>
-			<md-tab label="Graph option two">
-				<p>Pie</p>
+			<md-tab label="Box Plot">
+			<div flex id="chart">
+				<div class ="chartBorder">
+					<div box-plot id='boxPlot'></div>
+					</div>
+				</div>
 			</md-tab>
 			<md-tab label="Graph option three">
 				<p>Histo</p>
