Added add estimator dialog

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -7,7 +7,7 @@
 			</md-input-container>
 
 			<md-list>
-				<md-list-item ng-click="getUsers()">
+				<md-list-item ng-click="showAddEstimatorDialogBox()">
 					<p>Estimators</p>
 				</md-list-item>
 			</md-list>
