--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -12,8 +12,9 @@
 							<i class="glyphicon glyphicon-trash"></i>
 						</a>
 					</div>
-					<div d3-bars bar-height='20' bar-padding='5' id='barchart'></div>
-					
+					<div id="#chart">
+						<div d3-bars bar-height='20' bar-padding='5' id='barchart'></div>
+					</div>
 					<div class="" ng-repeat="r in report.project.children" >
 					<h3>Stats</h3>
 						{{r.title}}: <br /> <span style="padding-left: 5em">Standard deviation: {{r.stdDeviation}} </span> <span style="padding-left: 5em">Mean: {{r.mean}}</span><br /><br />
