--- a/mobile_app/www/modules/core/css/core.css
+++ b/mobile_app/www/modules/core/css/core.css
@@ -3,6 +3,15 @@
 	width: 100%;
 }
 
+.header_content {
+	/*
+	position: fixed;
+	height: 200px;
+	width: 100%;
+	z-index: 99;
+	*/
+}
+
 .content {
 	margin-top: 50px;
 }
