--- a/mobile_app/www/modules/projects/views/list-projects.client.view.html
+++ b/mobile_app/www/modules/projects/views/list-projects.client.view.html
@@ -36,7 +36,7 @@
 		md-gutter="10px" md-gutter-gt-sm="10px" >
 
 		<md-grid-tile ng-repeat="project in querySearch(searchText)" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1" style="z-index : 1; position: absolute">
-			<md-card flex class = "cardHeight" >
+			<md-card flex class = "cardHeight">
 				<md-toolbar layout = "row" class = "cardHeader">
 					<md-button class="md-icon-button" ng-show = "owner(project)" ng-click = "goTo('/settings/profile')">
 						<md-tooltip>
@@ -44,10 +44,10 @@
 						</md-tooltip>
 						<md-icon md-svg-src="modules/projects/img/icons/person.svg"></md-icon>
 					</md-button>
-					<div style="padding: 10px" class="md-toolbar-tools">
-						<div style="overflow:auto;" class="cardHeight">
-							<h3>{{project.name}}</h3>
-						</div>
+					<div style="padding: 10px; white-space: nowrap; overflow:hidden" class="md-toolbar-tools">
+						<h3>{{project.name}}</h3>
+						<md-tooltip>{{project.name}}</md-tooltip>
+
 					</div>
 					<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/projects/{{project._id}}/edit')">
 						<md-tooltip>
