--- a/mobile_app/www/modules/users/views/authentication/signup.client.view.html
+++ b/mobile_app/www/modules/users/views/authentication/signup.client.view.html
@@ -1,25 +1,34 @@
-<!-- <md-dialog aria-label="Login" data-ng-controller="AuthenticationController"> -->
-<section class="row" data-ng-controller="AuthenticationController">
-	<!-- <h3 class="col-md-12 text-center">Sign up using your social accounts</h3>
-	<div class="col-md-12 text-center">
-		<a href="/auth/facebook" class="undecorated-link">
-			<img src="/modules/users/img/buttons/facebook.png">
-		</a>
-		<a href="/auth/twitter" class="undecorated-link">
-			<img src="/modules/users/img/buttons/twitter.png">
-		</a>
-		<a href="/auth/google" class="undecorated-link">
-			<img src="/modules/users/img/buttons/google.png">
-		</a>
-		<a href="/auth/linkedin" class="undecorated-link">
-			<img src="/modules/users/img/buttons/linkedin.png">
-		</a>
-		<a href="/auth/github" class="undecorated-link">
-			<img src="/modules/users/img/buttons/github.png">
-		</a>
-	</div>
-	<h3 class="col-md-12 text-center">Or with your email</h3> -->
-	<div layout="coloum" layout-align="center center">
+<md-dialog aria-label="Sign Up Dialog" data-ng-controller="AuthenticationController">
+	<md-toolbar>
+		<div class="md-toolbar-tools">
+			<h2>Sign Up</h2>
+			<span flex></span>
+			<md-button class="md-icon-button" ng-click="cancel()">
+				<md-icon md-svg-src="modules/sidenav/img/close.svg" aria-label="Close dialog"></md-icon>
+			</md-button>
+		</div>
+	</md-toolbar>
+	<md-dialog-content>
+		<!-- <h3 class="col-md-12 text-center">Sign up using your social accounts</h3>
+		<div class="col-md-12 text-center">
+			<a href="/auth/facebook" class="undecorated-link">
+				<img src="/modules/users/img/buttons/facebook.png">
+			</a>
+			<a href="/auth/twitter" class="undecorated-link">
+				<img src="/modules/users/img/buttons/twitter.png">
+			</a>
+			<a href="/auth/google" class="undecorated-link">
+				<img src="/modules/users/img/buttons/google.png">
+			</a>
+			<a href="/auth/linkedin" class="undecorated-link">
+				<img src="/modules/users/img/buttons/linkedin.png">
+			</a>
+			<a href="/auth/github" class="undecorated-link">
+				<img src="/modules/users/img/buttons/github.png">
+			</a>
+		</div>
+		<h3 class="col-md-12 text-center">Or with your email</h3> -->
+
 		<form name="userForm" data-ng-submit="signup()" novalidate autocomplete="off">
 			<md-input-container>
 		    	<label>First Name</label>
@@ -39,7 +48,11 @@
 		    </md-input-container>
 			<md-input-container>
 		    	<label>Password</label>
-		    	<input id="password" name="password" data-ng-model="credentials.password">
+		    	<input type="password" id="password" name="password" data-ng-model="credentials.password">
+		    </md-input-container>
+		    <md-input-container>
+		    	<label>Confirm Password</label>
+		    	<input type="password" id="confirmationPassword" name="confirmationPassword" data-ng-model="confirmationPassword">
 		    </md-input-container>
 
 		    <div data-ng-show="error" class="errorMessage">
@@ -48,6 +61,5 @@
 		    
 			<md-button type="submit" class="dialogButton">Sign up</md-button>
 		</form>
-	</div>
-</section>
-<!-- </md-dialog> -->
+	</md-dialog-content>
+</md-dialog>
