--- a/mobile_app/www/modules/users/views/password/forgot-password.client.view.html
+++ b/mobile_app/www/modules/users/views/password/forgot-password.client.view.html
@@ -1,4 +1,6 @@
 <section class="row" data-ng-controller="PasswordController">
+	<div style="height:64px;">
+	</div>
 	<h3 class="col-md-12 text-center">Restore your password</h3>
 	<p class="small text-center">Enter your account username.</p>
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
